Representative Component Created

--- a/src/style.css
+++ b/src/style.css
@@ -10,9 +10,32 @@
     / auto 1fr auto;
   gap: 8px;
 }
+.App{
+  text-align: center;
+}
+.header {
+  grid-area: header;
+}
+.leftSide {
+  grid-area: leftSide;
+}
+.body {
+  grid-area: body;
+}
+.rightSide {
+  grid-area: rightSide;
+}
+.footer {
+  grid-area: footer;
+}
 
-.header { grid-area: header; }
-.leftSide { grid-area: leftSide; }
-.body { grid-area: body; }
-.rightSide { grid-area: rightSide; }
-.footer { grid-area: footer; }
+.App-content {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px +2vmin);
+  color: white;
+}
