--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,12 @@ body {
   padding: 30px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
+.formError {
+  color: red;
+  font-size: 12px;
+}
+
 .header {
   grid-area: header;
 }
