--- a/src/style.css
+++ b/src/style.css
@@ -1,41 +1,74 @@
-.layout {
-  width: 1366px;
-  height: 768px;
 
-  display: grid;
-  grid:
-    "header header header" auto
-    "leftSide body rightSide" 1fr
-    "footer footer footer" auto
-    / auto 1fr auto;
-  gap: 8px;
-}
 .App{
-  text-align: center;
-}
-.header {
-  grid-area: header;
-}
-.leftSide {
-  grid-area: leftSide;
-}
-.body {
-  grid-area: body;
-}
-.rightSide {
-  grid-area: rightSide;
-}
-.footer {
-  grid-area: footer;
+width: 100vw;
+height: 100vh;
+background-color: #282c34;
+
 }
 
-.App-content {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px +2vmin);
-  color: white;
+
+
+body{
+  margin: 0;
+  padding: 0;
 }
+
+.Sidebar{
+
+  height: auto;
+  width: 200px;
+  background-color: white;
+  color: black;
+  margin-left: auto; 
+margin-right: 0;
+
+}
+
+
+.SidebarList{
+height: auto;
+width: 100%;
+padding: 0;
+margin: 0px;
+
+}
+.SidebarList .row{
+ width: 100%;
+ height: 50px;
+
+ border:  1px solid #63C5DA;
+  display: flex;
+ list-style-type: none;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+ 
+
+}
+
+.SidebarList .row:hover{ 
+cursor: pointer;
+background-color:  #63C5DA;
+
+}
+
+
+.row #sidebarIcon {
+flex: 30%;
+display: grid;
+place-items: center;
+
+}
+
+.SidebarList #active {
+
+  background-color: #63C5DA;
+  color: white;
+
+}
+
+.row #sidebarTitle {
+  flex: 70%;
+
+  }
