--- a/src/style.css
+++ b/src/style.css
@@ -1,74 +1,84 @@
-
-.App{
-width: 100vw;
-height: 100vh;
-background-color: #282c34;
-
+.App {
+  width: 100vw;
+  height: 100vh;
 }
 
+.Header {
+  position: relative;
+}
 
+.Title {
+  position: absolute;
+  width: auto;
+  height: 58px;
+  left: 59px;
+  top: 165px;
 
-body{
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 58px;
+  color: red;
+}
+
+.HeaderImage {
+  height: 200px;
+  width: 80%;
+  object-fit: cover;
+}
+
+body {
+  background-color: #434859;
   margin: 0;
-  padding: 0;
+  padding: 10px;
 }
 
-.Sidebar{
-
+.Sidebar {
   height: auto;
   width: 200px;
   background-color: white;
   color: black;
-  margin-left: auto; 
-margin-right: 0;
-
+  margin-left: auto;
+  margin-right: 0;
 }
 
-
-.SidebarList{
-height: auto;
-width: 100%;
-padding: 0;
-margin: 0px;
-
+.SidebarList {
+  height: auto;
+  width: 100%;
+  padding: 0;
+  margin: 0px;
 }
-.SidebarList .row{
- width: 100%;
- height: 50px;
+.SidebarList .row {
+  width: 100%;
+  height: 50px;
 
- border:  1px solid #63C5DA;
+  border: 1px solid #63c5da;
   display: flex;
- list-style-type: none;
+  list-style-type: none;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
- 
-
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-.SidebarList .row:hover{ 
-cursor: pointer;
-background-color:  #63C5DA;
-
+.SidebarList .row:hover {
+  cursor: pointer;
+  background-color: #63c5da;
 }
-
 
 .row #sidebarIcon {
-flex: 30%;
-display: grid;
-place-items: center;
-
+  flex: 30%;
+  display: grid;
+  place-items: center;
 }
 
 .SidebarList #active {
-
-  background-color: #63C5DA;
+  background-color: #63c5da;
   color: white;
-
 }
 
 .row #sidebarTitle {
   flex: 70%;
-
-  }
+}
