--- a/src/style.css
+++ b/src/style.css
@@ -1,29 +1,41 @@
+:root {
+  --title-color: red;
+  --primary-blue: #38b6ff;
+}
+
 html,
 body {
   height: 100%;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Inter";
+  font-style: normal;
   text-decoration: none;
   list-style: none;
 }
 
+.main-container {
+  display: grid;
+  max-width: 100%;
+  grid-template-columns: 3fr 1fr;
+  margin-top: 40px;
+}
+
+.content {
+  align-self: center;
+  justify-self: center;
+}
 .Home-text {
   color: whitesmoke;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .App {
   padding: 10px;
-  display: flex;
-  flex-direction: column;
 }
 
 .Header {
   position: relative;
 }
 
-.content {
-}
 .Footer {
   width: 100%;
   text-align: center;
@@ -42,11 +54,10 @@ body {
   left: 40px;
   top: 140px;
   cursor: pointer;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 48px;
+ font-size: 55px;
+font-style: bold;
   line-height: 58px;
-  color: #f94c66;
+  color: var(--title-color);
 }
 
 .Header-img {
@@ -63,14 +74,10 @@ body {
 
 .Sidebar {
   height: auto;
-  width: 200px;
-  background-color: white;
+  width: 220px;
   color: black;
-  margin-right: 0px;
-  margin-left: auto;
-
-  border-radius: 5%;
-  overflow: hidden;
+  align-self: center;
+  justify-self: end;
 }
 
 .Sidebar-list {
@@ -85,21 +92,23 @@ body {
 }
 .Sidebar-list .row {
   width: 100%;
-  height: 50px;
-
+  height: 55px;
   display: flex;
   list-style-type: none;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background-color: white;
+
   color: black;
+  border: 1px solid var(--primary-blue);
+  margin-bottom: 10px;
 }
 
 .Sidebar-list .row:hover {
   cursor: pointer;
-  background-color: #6ddebb;
+  background-color: var(--primary-blue);
   color: white;
-  border-: 5%;
 }
 
 .row .sidebar-icon {
@@ -109,7 +118,7 @@ body {
 }
 
 .Sidebar-list #active {
-  background-color: #53bf9d;
+  background-color: var(--primary-blue);
   color: white;
 }
 
