--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,10 @@
   --title-color: red;
   --primary-blue: #38b6ff;
 }
+* {
+  text-decoration: none;
+  list-style: none;
+}
 
 html,
 body {
@@ -9,7 +13,6 @@ body {
   font-family: "Inter";
   font-style: normal;
   text-decoration: none;
-  list-style: none;
 }
 
 .main-container {
@@ -38,13 +41,15 @@ body {
 
 .Footer {
   width: 100%;
-  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   background-color: #303440;
-  height: 30px;
+  height: 40px;
   position: fixed;
   left: 0;
   bottom: 0;
   color: white;
+  align-content: center;
 }
 
 .Header-h1 {
@@ -65,7 +70,6 @@ body {
   font-size: 18px;
 }
 
-
 .Header-img {
   height: 200px;
   width: 80%;
@@ -84,31 +88,39 @@ body {
   color: black;
   align-self: center;
   justify-self: end;
-}
 
-.Sidebar-list {
-  height: auto;
-  width: 100%;
-  padding: 0;
-  margin: 0px;
-}
+  .Sidebar-list {
+    height: auto;
+    width: 100%;
+    padding: 0;
+    margin: 0px;
 
-.Sidebar-link {
-  text-decoration: none;
-}
-.Sidebar-list .row {
-  width: 100%;
-  height: 55px;
-  display: flex;
-  list-style-type: none;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
+     .row {
+        width: 100%;
+        height: 55px;
+        display: flex;
+        list-style-type: none;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        color: black;
+        border: 1px solid var(--primary-blue);
+        margin-bottom: 10px;
 
-  color: black;
-  border: 1px solid var(--primary-blue);
-  margin-bottom: 10px;
+        .nav-icon-text-container {
+          width: 100%;
+          display: grid;
+          grid-template-columns: 1fr 3fr;
+          align-items: center;
+        }
+    }
+     .active {
+          cursor: pointer;
+          background-color: var(--primary-blue);
+          color: white;
+        }
+  }
 }
 
 .Sidebar-list .row:hover {
@@ -117,24 +129,18 @@ body {
   color: white;
 }
 
-.row .sidebar-icon {
-  flex: 30%;
+.Sidebar-icon {
   display: grid;
-  place-items: center;
+  justify-self: center;
+  align-self: center;
 }
 
-.Sidebar-list #active {
-  background-color: var(--primary-blue);
-  color: white;
-}
-.BlueButton{
+.BlueButton {
   background-color: var(--primary-blue);
   color: white;
   float: right;
-border:none;
-padding: 5px 10px;
+  border: none;
+  padding: 5px 10px;
 }
 
-.row .sidebar-title {
-  flex: 70%;
-}
+
