--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,7 @@ body {
 
 .Representative {
   display: grid;
-
+  cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 10px;
   border-radius: 1%;
@@ -51,23 +51,20 @@ body {
   }
   .content {
     grid-column: 1/4;
-    padding-block: 40px;
+    margin-block: 40px;
+    justify-self: center;
+    align-self: center;
   }
   .Sidebar {
     grid-column: 4/5;
-    justify-self: center;
-    height: auto;
-    padding-block: 40px;
+    justify-self: flex-start;
+
+    margin-block: 40px;
   }
 
   .Footer {
     grid-column: 1/5;
   }
-}
-
-.content {
-  align-self: center;
-  justify-self: center;
 }
 
 //Home Page
@@ -90,7 +87,11 @@ body {
     font-size: 55px;
     font-style: bold;
     line-height: 58px;
-    color: red;
+    color:#fc3d36 ;
+&:hover{
+  color: red;
+}
+
   }
   .Header-img {
     height: 200px;
@@ -100,7 +101,7 @@ body {
 }
 
 .Footer {
-  position:sticky;
+  position: sticky;
   top: 100%;
   width: 100%;
   display: grid;
@@ -131,17 +132,27 @@ body {
 }
 
 .Sidebar {
-  height: auto;
   width: 220px;
   color: black;
-
-  justify-self: end;
+  height: fit-content;
 
   .Sidebar-list {
-    height: auto;
     width: 100%;
     padding: 0;
     margin: 0px;
+
+    .vector {
+      /* Vector 1 */
+      position: absolute;
+      z-index: 100;
+      width: 20.23px;
+      height: 20.5px;
+      left: 0px;
+      top: 5px;
+
+      background: red;
+      border: 1px solid #434859;
+    }
 
     .row {
       width: 100%;
@@ -149,11 +160,10 @@ body {
       display: flex;
       list-style-type: none;
       flex-direction: row;
-      justify-content: center;
-      align-items: center;
+
       background-color: white;
       color: black;
-      border: 1px solid primary-blue;
+      border: 1px solid $primary-blue;
       margin-bottom: 10px;
 
       .nav-icon-text-container {
