--- a/src/style.scss
+++ b/src/style.scss
@@ -85,7 +85,7 @@ width: 1000px;
   color: white;
 }
 .Privacy {
-  
+
   display: grid;
  h1, h2{
   justify-self: center;
@@ -98,7 +98,7 @@ width: 1000px;
   text-decoration: underline;
  }
  }
- 
+
 
 }
 
@@ -125,14 +125,13 @@ width: 1000px;
 
 .Header {
   position: relative;
-  padding-left: 10px;
-  padding-top: 10px;
+  padding: 20px;
   .Header-h1 {
     position: absolute;
     width: auto;
     height: 58px;
     left: 40px;
-    top: 140px;
+    top: 160px;
     cursor: pointer;
     font-size: 55px;
     font-style: bold;
@@ -144,7 +143,7 @@ width: 1000px;
   }
   .Header-img {
     height: 200px;
-    width: 80%;
+    width: 100%;
     object-fit: cover;
   }
 }
@@ -184,6 +183,9 @@ body {
   width: 220px;
   color: black;
   height: fit-content;
+  position: fixed;
+  right: 20px;
+  top: 240px;
 
   .Sidebar-list {
     width: 100%;
