--- a/src/style.scss
+++ b/src/style.scss
@@ -10,6 +10,7 @@ body {
   font-style: normal;
   text-decoration: none;
 }
+
 .App {
   min-height: 100vh;
 }
@@ -18,6 +19,7 @@ body {
   display: grid;
   justify-content: center;
 }
+
 .Representative {
   display: grid;
   cursor: pointer;
@@ -26,6 +28,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 10px;
   border-radius: 1%;
+
   &:hover {
     background-color: #4e5469;
   }
@@ -38,6 +41,7 @@ body {
 
     border-radius: 1%;
   }
+
   .Representative-text {
     display: grid;
     color: white;
@@ -50,18 +54,22 @@ body {
     }
   }
 }
+
 .main-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+
   .Header {
     grid-column: 1/5;
   }
+
   .content {
     grid-column: 1/4;
     margin-block: 40px;
     justify-self: center;
     align-self: center;
   }
+
   .Sidebar {
     grid-column: 4/5;
     justify-self: flex-start;
@@ -78,6 +86,8 @@ body {
 .Home-text {
   color: whitesmoke;
   font-size: 25px;
+  margin-right: -250px;
+  margin-top: 70px;
 }
 
 .FooterPage{
@@ -108,8 +118,35 @@ width: 1000px;
   gap: 30px;
 }
 
-.SearchInput {
-  grid-column: 1/4;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0;
+  /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  /* Firefox */
+}
+
+.ZipError {
+  color: whitesmoke;
+  font-size: 50px;
+}
+
+.SearchBar {
+  margin-bottom: 10px;
+
+  input {
+    width: 200px;
+    border: 1px solid #555;
+    padding: 9px 4px 9px 40px;
+    background: white
+      url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
+      no-repeat 13px center;
+  }
 }
 .CustomForm {
   background-color: whitesmoke;
@@ -117,15 +154,17 @@ width: 1000px;
   width: 600px;
 
   border-radius: 2%;
-  .formError {
-    color: #fc3d36;
-    font-size: small;
-  }
+}
+
+.Error {
+  color: #fc3d36;
+  font-size: medium;
 }
 
 .Header {
   position: relative;
-  padding: 20px;
+  padding: 8px;
+
   .Header-h1 {
     position: absolute;
     width: auto;
@@ -137,14 +176,32 @@ width: 1000px;
     font-style: bold;
     line-height: 58px;
     color: #fc3d36;
+
     &:hover {
       color: red;
     }
   }
+
   .Header-img {
     height: 200px;
-    width: 100%;
+    width: 93%;
     object-fit: cover;
+    padding-left: 102px;
+  }
+  .logo {
+    position: absolute;
+    width: 23%;
+    height: auto;
+    left: -36px;
+    top: 4px;
+    z-index: 1;
+  }
+  .wave {
+    position: absolute;
+    width: 26%;
+    height: auto;
+    top: 0px;
+    left: -135px;
   }
 }
 
@@ -159,6 +216,7 @@ width: 1000px;
 
   justify-content: end;
   align-items: center;
+
   .Footer-items a {
     color: #434859;
     padding-inline: 10px;
