--- a/src/style.scss
+++ b/src/style.scss
@@ -72,7 +72,7 @@ body {
 
   .Sidebar {
     grid-column: 4/5;
-    justify-self: flex-start;
+    justify-self: flex-end;
 
     margin-block: 40px;
   }
@@ -114,7 +114,7 @@ width: 1000px;
 
 .Politicians-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 30px;
 }
 
@@ -165,12 +165,15 @@ input[type="number"] {
   position: relative;
   padding: 8px;
 
-  .Header-h1 {
+  .logo {
     position: absolute;
-    width: auto;
-    height: 58px;
-    left: 40px;
-    top: 160px;
+    width: 300px;
+    object-fit: cover;
+
+    height: 150px;
+    left: 60px;
+    top: 130px;
+    z-index: 1;
     cursor: pointer;
     font-size: 55px;
     font-style: bold;
@@ -188,14 +191,7 @@ input[type="number"] {
     object-fit: cover;
     padding-left: 102px;
   }
-  .logo {
-    position: absolute;
-    width: 23%;
-    height: auto;
-    left: -36px;
-    top: 4px;
-    z-index: 1;
-  }
+
   .wave {
     position: absolute;
     width: 26%;
@@ -241,9 +237,8 @@ body {
   width: 220px;
   color: black;
   height: fit-content;
-  position: fixed;
-  right: 20px;
-  top: 240px;
+ margin-right: 32px;
+ 
 
   .Sidebar-list {
     width: 100%;
