--- a/src/style.scss
+++ b/src/style.scss
@@ -90,26 +90,24 @@ body {
   margin-top: 70px;
 }
 
-.FooterPage{
-width: 1000px;
+.FooterPage {
+  width: 1000px;
   color: white;
 }
 .Privacy {
-
   display: grid;
- h1, h2{
-  justify-self: center;
- }
- a{
-  color: white;
-  font-style: italic;
-  font-size: 17px;
-  &:hover{
-  text-decoration: underline;
- }
- }
-
-
+  h1,
+  h2 {
+    justify-self: center;
+  }
+  a {
+    color: white;
+    font-style: italic;
+    font-size: 17px;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 .Politicians-container {
@@ -137,23 +135,36 @@ input[type="number"] {
 }
 
 .SearchBar {
-  margin-bottom: 10px;
+  font-size: 14px;
+  border-radius: 6px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  width: 200px;
 
-  input {
-    width: 200px;
-    border: 1px solid #555;
-    padding: 9px 4px 9px 40px;
-    background: white
-      url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
-      no-repeat 13px center;
+  transition: box-shadow 100ms ease-in, border 250ms ease-in,
+    background-color 100ms ease-in;
+  border: 3px solid white;
+  height: 30px;
+  background: white
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
+    no-repeat 13px center;
+  &:hover {
+    border-color: $primary-blue;
   }
+
+  padding: 9px 4px 9px 40px;
 }
-.CustomForm {
+
+.BasicContainer {
   background-color: whitesmoke;
   padding: 20px;
   width: 600px;
 
   border-radius: 2%;
+  .Title {
+    font-size: x-large;
+    margin-bottom: 20px;
+  }
 }
 
 .Error {
@@ -237,8 +248,7 @@ body {
   width: 220px;
   color: black;
   height: fit-content;
- margin-right: 32px;
- 
+  margin-right: 32px;
 
   .Sidebar-list {
     width: 100%;
@@ -298,10 +308,38 @@ body {
   }
 }
 
-.BlueButton {
-  background-color: $primary-blue;
-  color: white;
-  float: right;
-  border: none;
+.TextBox {
+  font-size: 14px;
+  border-radius: 6px;
+  line-height: 1.5;
+  width: 370px;
   padding: 5px 10px;
+  margin-top: 8px;
+  transition: box-shadow 100ms ease-in, border 250ms ease-in,
+    background-color 100ms ease-in;
+  border: 2px solid #dee1e2;
+  background: #dee1e2;
+  display: inline;
+  height: 36px;
+  &:hover {
+    border-color: $primary-blue;
+  }
+  &:focus {
+    border-color: $primary-blue;
+    background: #dee1e2;
+  }
+}
+
+.BlueButton {
+  display: inline-block;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  background-color: $primary-blue;
+  border-radius: 4px;
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
+  line-height: 26px;
 }
