--- a/src/style.scss
+++ b/src/style.scss
@@ -5,10 +5,22 @@ $primary-blue: #38b6ff;
   list-style: none;
 }
 
+.Newsletter {
+  div {
+    display: grid;
+    margin-top: 10px;
+  }
+}
+
+.Bolded-Link {
+  font-weight: 900;
+  color: $primary-blue;
+}
 body {
   font-family: "Inter";
   font-style: normal;
   text-decoration: none;
+  font-weight: 300;
 }
 
 .App {
@@ -90,19 +102,18 @@ body {
   margin-top: 70px;
 }
 
-.FooterPage {
-  width: 1000px;
-  color: white;
-}
 .Privacy {
+  color: black;
+
   display: grid;
   h1,
-  h2 {
+  h2,
+  h3 {
     justify-self: center;
   }
   a {
-    color: white;
-    font-style: italic;
+    color: $primary-blue;
+    font-weight: 800;
     font-size: 17px;
     &:hover {
       text-decoration: underline;
@@ -110,10 +121,18 @@ body {
   }
 }
 
+.SignUp {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
 .Politicians-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 30px;
+  width: fit-content;
 }
 
 input::-webkit-outer-spin-button,
@@ -156,14 +175,15 @@ input[type="number"] {
 }
 
 .BasicContainer {
-  background-color: whitesmoke;
+  background-color: white;
   padding: 20px;
   width: 600px;
 
-  border-radius: 2%;
+  border-radius: 10px;
   .Title {
     font-size: x-large;
     margin-bottom: 20px;
+    font-weight: 500;
   }
 }
 
@@ -255,19 +275,6 @@ body {
     padding: 0;
     margin: 0px;
 
-    .vector {
-      /* Vector 1 */
-      position: absolute;
-      z-index: 100;
-      width: 20.23px;
-      height: 20.5px;
-      left: 0px;
-      top: 5px;
-
-      background: red;
-      border: 1px solid #434859;
-    }
-
     .row {
       width: 100%;
       height: 55px;
@@ -279,7 +286,7 @@ body {
       color: black;
       border: 1px solid $primary-blue;
       margin-bottom: 10px;
-
+      font-weight: 300;
       .nav-icon-text-container {
         width: 100%;
         display: grid;
@@ -317,7 +324,7 @@ body {
   margin-top: 8px;
   transition: box-shadow 100ms ease-in, border 250ms ease-in,
     background-color 100ms ease-in;
-  border: 2px solid #dee1e2;
+  border: 3px solid #dee1e2;
   background: #dee1e2;
   display: inline;
   height: 36px;
